--- a/.env
+++ b/.env
@@ -6,19 +6,12 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=empleados
-# DB_USERNAME=root
-# DB_PASSWORD=
-
 DB_CONNECTION=mysql
-DB_HOST=y5svr1t2r5xudqeq.cbetxkdyhwsb.us-east-1.rds.amazonaws.com	
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=rliupt6daliiid1m
-DB_USERNAME=grl8upkfzsa5bffa
-DB_PASSWORD=mik6dhov1uxoy9ei
+DB_DATABASE=empleados
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
